# Perturb-Audit

./: LICENSE  README.md  environment_analysis.yml  pyproject.toml
configs/: KLF2-A1_C1.yaml  default_config.yaml
perturb_audit/: main.py
perturb_audit/cr_analyzer/: runner.py
perturb_audit/cr_analyzer/analysis_core/: assignment.py  collision_analyzer.py  collision_quantifier.py  evaluation.py  matrix_generator.py  transcriptome_eval.py  utils.py
perturb_audit/cr_analyzer/data_io/: data_loader.py
perturb_audit/cr_analyzer/visualization/: evaluation_plots.py  plotter.py  report_generator.py  transcriptome_eval_plots.py
