[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "perturb-audit"
version = "0.1.0"
description = "An open-source diagnostic and denoising framework to identify and quantify cross-library (GEX and CRISPR) collisions resulting from Post-GEM PCR chimeras."
authors = [
    { name="Song Xin", email="Givehearttou@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "scanpy>=1.9.3",
    "anndata>=0.8.0",
    "numpy",
    "scipy",
    "pandas",
    "h5py",
    "python-igraph",
    "leidenalg",
    "pySankey",
    "adjustText",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["perturb_audit*"]

[project.scripts]
perturb-audit = "perturb_audit.main:main"